<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:background="@color/white"    android:layout_height="match_parent"    android:descendantFocusability="blocksDescendants"    android:orientation="vertical"    android:id="@+id/mRlcg1"   >   <RelativeLayout        android:layout_width="fill_parent"       android:layout_height="50dp"               android:background="@drawable/title1"                  android:id="@+id/mRl1"              >                          <TextView                 android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/c3"                style="@style/text1"                android:id="@+id/mTvc"                android:layout_centerInParent="true"                />                 </RelativeLayout>              <LinearLayout            android:layout_below="@id/mRl1"           android:layout_width="fill_parent"           android:layout_height="fill_parent"           android:orientation="vertical"           >                      <LinearLayout                android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:orientation="vertical"                android:tag="sticky"               >                          <View                    android:layout_width="fill_parent"                   android:layout_height="0.5dp"                   android:background="@color/www3"                   />                      <LinearLayout                android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:paddingTop="4dp"               android:paddingBottom="4dp"               android:orientation="horizontal"               android:background="@color/www2"               >               <TextView                    android:layout_width="0dp"                   android:layout_weight="3"                   android:gravity="center"                   android:layout_height="wrap_content"                   android:text="@string/c12a"                   />               <View                    android:layout_width="0.5dp"                   android:layout_height="fill_parent"                   android:background="@color/www3"                   />               <TextView                    android:layout_width="0dp"                   android:layout_weight="2"                   android:gravity="center"                   android:layout_height="wrap_content"                   android:text="@string/c13a"                   />               <View                    android:layout_width="0.5dp"                   android:layout_height="fill_parent"                   android:background="@color/www3"                   />                              <TextView                    android:layout_width="0dp"                   android:layout_weight="2"                   android:gravity="center"                   android:layout_height="wrap_content"                   android:text="@string/c14a"                   />               <View                    android:layout_width="0.5dp"                   android:layout_height="fill_parent"                   android:background="@color/www3"                   />                              <TextView                    android:layout_width="0dp"                   android:layout_weight="3"                   android:gravity="center"                   android:layout_height="wrap_content"                   android:text="@string/c15a"                   />               <View                    android:layout_width="0.5dp"                   android:layout_height="fill_parent"                   android:background="@color/www3"                   />                          </LinearLayout>                                     <View                    android:layout_width="fill_parent"                   android:layout_height="0.5dp"                   android:background="@color/www3"                   />                                     </LinearLayout>                <ListView          android:layout_width="fill_parent"         android:layout_height="fill_parent"         android:id="@+id/mLv1"         android:divider="#00000000"         ></ListView>                                                </LinearLayout>          <ProgressBar            android:id="@+id/mPb1"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            android:layout_centerVertical="true" />              </RelativeLayout>