<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:background="@color/www2"    android:layout_height="match_parent"    android:orientation="vertical"   >        <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="50dp"        android:background="@drawable/title1"        >        <RelativeLayout             android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerInParent="true"            >                        <TextView                 android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/c48"                style="@style/text1"                android:layout_centerInParent="true"                />                               </RelativeLayout>        </RelativeLayout>        <ScrollView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            >        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:background="@color/white"            android:orientation="vertical">                      <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="48dp"        android:layout_marginLeft="18dp"        android:id="@+id/mRl1"        android:layout_marginRight="18dp"        >        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"                             android:layout_marginLeft="6dp"               android:id="@+id/mTv1"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c49"               />        <ImageView             android:layout_width="wrap_content"            android:layout_height="20dp"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:src="@drawable/a77"            />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />     <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="48dp"        android:layout_marginLeft="18dp"        android:id="@+id/mRl2"        android:layout_marginRight="18dp"        >        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"                             android:layout_marginLeft="6dp"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c50"               />        <ImageView             android:layout_width="wrap_content"            android:layout_height="20dp"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:src="@drawable/a77"            />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />     <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="48dp"        android:layout_marginLeft="18dp"        android:id="@+id/mRl3"        android:layout_marginRight="18dp"        >        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"                             android:layout_marginLeft="6dp"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c51"               />        <ImageView             android:layout_width="wrap_content"            android:layout_height="20dp"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:src="@drawable/a77"            />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />             <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="48dp"        android:layout_marginLeft="18dp"        android:id="@+id/mRl4"        android:layout_marginRight="18dp"        >        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"                             android:layout_marginLeft="6dp"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c53"               />        <ImageView             android:layout_width="wrap_content"            android:layout_height="20dp"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:src="@drawable/a77"            />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />     <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="48dp"        android:layout_marginLeft="18dp"        android:id="@+id/mRl5"        android:layout_marginRight="18dp"        >        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"                             android:layout_marginLeft="6dp"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c55"               />        <ImageView             android:layout_width="wrap_content"            android:layout_height="20dp"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:src="@drawable/a77"            />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />                <RelativeLayout             android:layout_width="fill_parent"            android:background="@color/white"            android:layout_height="30dp"            ></RelativeLayout>                <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x1"            />                </LinearLayout>   </ScrollView>   </LinearLayout>