<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="fill_parent"    android:background="@color/transparent"    android:layout_height="wrap_content"   >   <LinearLayout        android:orientation="horizontal"       android:layout_width="fill_parent"              android:layout_height="wrap_content"       >       <View            android:layout_width="0dp"           android:layout_height="1dp"           android:layout_weight="1"           />       <LinearLayout            android:layout_width="0dp"           android:layout_weight="4"                  android:background="@color/www2"                      android:layout_height="wrap_content"           android:orientation="vertical"           >           <RelativeLayout                android:layout_width="fill_parent"               android:layout_height="45dp"               android:id="@+id/mRl1"               android:background="@drawable/title"               >                          <ImageView                android:layout_width="wrap_content"               android:id="@+id/mIv1"               android:src="@drawable/delete"               android:layout_alignParentRight="true"               android:layout_centerVertical="true"               android:layout_height="wrap_content"               android:scaleType="fitXY"               />                      </RelativeLayout>           <LinearLayout                android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:layout_marginLeft="10dp"               android:layout_marginRight="10dp"               android:orientation="vertical"               >              <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="45dp"        android:id="@+id/mRl3"        >               <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_marginLeft="6dp"               android:id="@+id/mTv1a"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/d1"               />                        <EditText                android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mTv1a"               android:id="@+id/mTv1"                             android:layout_marginLeft="15dp"               android:layout_centerVertical="true"               style="@style/text2x"               />                </RelativeLayout>           <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />          <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="45dp"        >               <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_marginLeft="6dp"               android:id="@+id/mTv2a"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/d2"               />                 <EditText                android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mTv2a"               android:id="@+id/mTv2"android:inputType="number|numberDecimal"               android:layout_marginLeft="15dp"               android:layout_centerVertical="true"               style="@style/text2x"               />                </RelativeLayout>                <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />          <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="45dp"        >               <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_marginLeft="6dp"               android:id="@+id/mTv3a"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/d3"               />                 <EditText                             android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mTv3a"               android:id="@+id/mTv3"               android:inputType="number"               android:layout_marginLeft="15dp"               android:layout_centerVertical="true"               style="@style/text2x"               />                </RelativeLayout>                <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />                            <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="45dp"        >               <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_marginLeft="6dp"               android:id="@+id/mTv4a"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/d4"               />                 <EditText                android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mTv4a"               android:id="@+id/mTv4"               android:layout_marginLeft="15dp"               android:layout_centerVertical="true"               style="@style/text2x"               android:inputType="number"               />                </RelativeLayout>                <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />                                                               <LinearLayout               android:orientation="horizontal"                               android:layout_marginTop="15dp"               android:layout_width="fill_parent"               android:layout_height="25dp"               android:paddingLeft="10dp"               android:paddingRight="10dp"               >               <Button                android:layout_width="0dp"               android:layout_weight="1"               android:layout_height="fill_parent"               android:layout_centerInParent="true"               android:text="@string/c19"                style="@style/text23"                android:gravity="center"                android:id="@+id/mBtSure"               android:background="@drawable/t8"               />               <View                                   android:layout_width="0dp"               android:layout_weight="1"                                  android:layout_height="fill_parent"                                      />               <Button                android:layout_width="0dp"               android:layout_weight="1"               android:layout_height="fill_parent"               android:layout_centerInParent="true"               android:text="@string/c20"                style="@style/text23"                                android:id="@+id/mBtCancel"                                android:gravity="center"               android:background="@drawable/t8"               />               </LinearLayout></LinearLayout>               <View                    android:layout_width="fill_parent"                   android:layout_height="10dp"                   />       </LinearLayout>       <View            android:layout_width="0dp"           android:layout_height="1dp"           android:layout_weight="1"           />       </LinearLayout>         </LinearLayout>